Updated image API and OpenAPI spec
